soft assertions